--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ ul li
        background-color: #e3d9fb;
     color: #988ded;
 }
-/*------end tools------------------------/
+/*------end tools---------------------------------------*/
 /*------------------------------------------------------*/
 /*start verify*/
 .column3 .verify
